Basic code finish. The aplication can create, delete and consult bookings for determinate products of each users

--- a/resources/bookings/config.json
+++ b/resources/bookings/config.json
@@ -13,7 +13,7 @@
 			"name": "initDate",
 			"type": "number",
 			"typeLabel": "string",
-			"required": false,
+			"required": true,
 			"id": "initDate",
 			"order": 2
 		},
